Fix grammar and change spacing

--- a/common/theme.css
+++ b/common/theme.css
@@ -3,8 +3,7 @@
   --color-secondary: #383838;
   --color-light-background: #f7f7f7;
   --color-border: #95989a;
-
-  --font-primary: "Open Sans", Arial, sans-serif;
+  --font-primary: "Open Sans", arial, sans-serif;
   --font-secondary: "Oswald", sans-serif;
 }
 
